kubernetes-manifests/vulnerable-node-app/vuln-node-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vulnerable-node-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vulnerable-node-app
  namespace: vulnerable-node-app
  labels: 
    demo: roadshow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vulnerable-node-app
  template:
    metadata:
      labels:
        app: vulnerable-node-app
    spec:
      containers:
        - name: vulnerable-node-app
          image: quay.io/mfoster/nodejs-goof-vuln-main:latest
          command: ["/bin/bash", "-c", "while true; do sleep 1000; done"]
          stdin: true
          tty: true
