kubernetes-manifests/vulnerable-node-app/service-vulnerable-node-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: vulnerable-node-app
  namespace: vulnerable-node-app
spec:
  selector:
    app: vulnerable-node-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
