kubernetes-manifests/vulnerable-node-app/route-vulnerable-node-app.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vulnerable-node-app
  namespace: vulnerable-node-app
spec:
  to:
    kind: Service
    name: vulnerable-node-app
  port:
    targetPort: 80
  tls:
    termination: edge
  wildcardPolicy: None
